# fastq-peekaboo

./: .gitignore  Cargo.toml  README.md  build.sh
src/: fastq.rs  lib.rs
